welcome.lessons.welcome.methods.returning.MethodsReturning.scala.error
Program:4: error: Boolean does not take parameters
	if (vuBiscuit()== true) {
                     ^Program:7: error: type mismatch;
 found   : Unit
 required: Boolean
	for (x <- 0 to 6) {
               ^