welcome.lessons.welcome.methods.returning.MethodsReturning.scala.code
def haveBaggle():Boolean = {
	val vuBiscuit=false;
	if (vuBiscuit()== true) {
		return true;
	} else {
	for (x <- 0 to 6) {
		for (x <- 0 to 6) {
			avance()
			if (estSurBiscuit) {
				vuBiscuit==true
			}
		}
	droite()
	avance()
	gauche()
	}
}
}
